# examples.composabl.io

./: .gitignore  README.md  base_config.py  launcher.py
agents/: README.md  pyproject.toml
agents/airplane/: agent.py  get_initial_state.py  sensors.py  teacher.py
agents/boiler/: agent.py  sensors.py  teacher.py
agents/cstr/: agent.py  historian.ipynb  historian_analytics.ipynb  history_analytics.ipynb  teacher.py
agents/cstr/deep_reinforcement_learning/: agent.py  agent_inference.py  benchmarks.py  history.pkl  history_analytics.ipynb  inference_analytics.ipynb  inference_data.pkl  teacher.py
agents/cstr/external_sim/: sim.py
agents/cstr/full_example/: agent.py  controllers.py  perceptors.py  teachers.py
agents/cstr/linear_mpc/: agent.py  agent_inference.py  benchmarks.py  controller.py  inference_analytics.ipynb  inference_data.pkl
agents/cstr/multi_agent/: agent.py
agents/cstr/multi_skill_agent/: selector_history.pkl  ss2_history.pkl  transition_history.pkl
agents/cstr/multiple_learned_skills/: agent.py  agent_inference.py  benchmarks.py  history_analytics.ipynb  inference_analytics.ipynb  inference_data.pkl  selector_history.pkl  ss1_history.pkl  ss2_history.pkl  teacher.py  train_history_analytics.ipynb  transition_history.pkl
agents/cstr/multiple_learned_skills_programmed/: agent.py  agent_inference.py  benchmarks.py  inference_analytics.ipynb  teacher.py  train_history_analytics.ipynb
agents/cstr/multiple_skills_perceptor/: agent.py  agent_inference.py  benchmarks.py  history_analytics.ipynb  inference_analytics.ipynb  inference_data.pkl  perceptors.py  selector_history.pkl  ss1_history.pkl  ss2_history.pkl  teacher.py  train_history_analytics.ipynb  transition_history.pkl
agents/cstr/single_agent/: agent.py  agent_inference.py  teacher.py
agents/cstr/skill_group_drl_mpc/: agent.py  agent_inference.py  benchmarks.py  cstr_mpc_teacher.py  history.pkl  inference_analytics.ipynb  inference_data.pkl  linear_mpc_model.py  main_cstr_mpc.py  non_linear_mpc_model.py  teacher.py
agents/demo/: agent.py  controller.py  main.py  pyproject.toml  teacher.py
agents/demo/agent/: controller.py  perceptors.py  scenarios.py  sensors.py  teacher.py
agents/demo/demo/: main.py
agents/demo/sim/: sim.py
agents/filament-extruder/: agent.py  teacher.py
agents/inventory/: agent.py  agent_inference.py  sensors.py  teacher.py  train_history_analytics.ipynb
agents/inventory/external_sim/: sim.py
agents/inventory/history/: inference_data.csv  inference_data.pkl  inference_data_baseline.csv  inference_data_baseline.pkl
agents/lunar-lander/: agent.py  teacher.py
agents/lunar_lander/: pyproject.toml
agents/lunar_lander/lunar_lander/: main.py
agents/maintenance/: agent.py  teacher.py
agents/mujoco/walker2d/: agent.py  teacher.py
agents/my_agent/: pyproject.toml
agents/my_agent/backup/: pyproject.toml
agents/my_agent/my_agent/: main.py  reward.py
agents/src/airplane/: agent.py  teacher.py
agents/src/boiler/: agent.py
agents/src/cstr/: agent.py
agents/src/demo/: agent.py
agents/src/filament-extruder/: agent.py  teacher.py
agents/src/inventory/: agent.py  teacher.py
agents/src/lunar-lander/: agent.py  teacher.py
agents/src/maintenance/: agent.py  teacher.py
agents/src/starship/: agent.py  teacher.py
agents/starship/: agent.py  history_analytics.ipynb  mpc_history.pkl  teacher.py
agents/starship/drl_agent/: agent.py  teacher.py
agents/starship/ml_mpc/: agent.py  teacher.py
agents/starship/multi_agent/: agent.py  teacher.py
agents/train_agent/: airplane_teacher.py  boiler_teacher.py  cstr_teacher.py  inventory_teacher.py  main.py  main_airplane.py  main_boiler.py  main_cstr.py  main_filament_extruder.py  main_inventory.py  main_maintenance.py  main_starship.py  maintenance_teacher.py  perceptors.py  starship_teacher.py
agents/whisky_business/drl_agent/: agent.py  agent_inference.py  teacher.py
agents/whisky_business/drl_agent_10/: agent.py  agent_inference.py  benchmarks.py  metrics.pkl  teacher.py
agents/whisky_business/drl_agent_2/: agent.py  teacher.py
agents/whisky_business/multi_agent_controller_5/: perceptors.py  teacher.py
agents/whisky_business/multi_agent_controller_learned_7/: perceptors.py
agents/whisky_business/multi_agent_programmed/: teacher.py
agents/whisky_business/optimization/: agent.py  optimizer.py
agents/whisky_business/optimization_1/: agent_inference.py  agent_inference2.py  benchmarks.py  benchmarks_heur.py  controller_test.py  heuristic_controller.py  make_controller.py  metrics.pkl  order_controller.py  whisky_business.ipynb
agents/whisky_business/perceive_plan_execute_drl_4/: agent_inference.py  make_controller.py
agents/whisky_business/perceive_plan_execute_drl_h_11/: agent.py  teacher.py
llm_as_a_perceptor/chemical_engineer_llm/: README.md  pyproject.toml
perceptors/composabl-perceptor-derivative/: README.md  pyproject.toml
perceptors/composabl-perceptor-llm/: README.md  pyproject.toml
simulation/: Dockerfile  pyproject.toml
simulation/docker/: docker-entrypoint.sh
simulation/scripts/: build-deploy-azure.sh
simulation/simulation/: main.py  server_impl.py
simulators/: README.md  pyproject.toml
simulators/airplane/: Dockerfile  README.md  requirements.txt
simulators/cstr/: requirements.txt
simulators/demo/: requirements.txt
simulators/demo_continuous/: requirements.txt
simulators/demo_discrete/: Dockerfile
simulators/demo_test/: README.md
simulators/filament_extruder/: Dockerfile  README.md  requirements.txt
simulators/gymnasium-mujoco/: requirements.txt
simulators/industrial_boiler/: README.md  requirements.txt
simulators/inventory_management/: Dockerfile  README.md  requirements.txt
simulators/lunar_lander/: Dockerfile  README.md  requirements.txt
simulators/maintenance_management/: Dockerfile  README.md  requirements.txt
simulators/mujoco/: Dockerfile  README.md  requirements.txt
simulators/my_simulator/: README.md  pyproject.toml
simulators/starship/: requirements.txt
simulators/whisky_business/: README.md  requirements.txt
(+1219 files in other folders)
