[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["Octavio Santiaog <octavio@composabl.io>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.8.13"
torch = "2.0.0" # Latest version (2.0.1) has an issue with cuda installation (https://github.com/pytorch/pytorch/issues/100974)
composabl-dev = "0.4.8.dev2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
