[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation_example"
version = "0.1.0"
description = "Simulation Example to run with Composabl"
authors = [
    {name = "Octavio Santiago", email = "octavio@composabl.io"}]
readme = "README.md"
requires-python = ">=3.8.13"
dependencies = [
    "composabl-dev >= 0.2.0",
    "gymnasium == 0.26.3"
]
