[tool.poetry]
name = "sim-abstraction"
version = "0.1.0"
description = ""
authors = ["Hunter Park <hunter@mirror.co>"]
readme = "README.md"
packages = [{include = "sim_abstraction"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

