[tool.poetry]
name = "my_agent"
version = "0.1.0"
description = ""
authors = ["Octavio Santiago <octaviobomfim@gmail.com>"]
readme = "README.md"
packages = [{include = "my_agent}]

[tool.poetry.dependencies]
python = "~3.8"
composabl = "^0.2.7"
composabl-ray = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "my_agent.main:start"